crates/axiom-macros/tests/compile-fail/cf-invalid-cell-layer.rs
#[axiom_macros::cell("invalid_layer")]
struct BogusCell {
    id: axiom_kernel::id::CellId,
}

fn main() {}