crates/axiom-macros/tests/compile-fail/cf-invalid-cell-layer.stderr
error: invalid layer 'invalid_layer': expected exec|validate|agent|oversight
 --> tests/compile-fail/cf-invalid-cell-layer.rs:1:22
  |
1 | #[axiom_macros::cell("invalid_layer")]
  |                      ^^^^^^^^^^^^^^^
